<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>ksp_bridge_examples</name>
	<version>0.0.1</version>
	<description>Examples for ksp_bridge.</description>
	<maintainer email="toth-janos@outlook.com">T칩th J치nos</maintainer>
	<author email="toth-janos@outlook.com">T칩th J치nos</author>
	<license>Apache License 2.0</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclcpp</depend>
	<depend>ksp_bridge_interfaces</depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>